--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,13 @@
   <title>Bc</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta sandbox="allow">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script async src="https://www.youtube.com/iframe_api"></script>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 <body>
   <app-root></app-root>
