--- a/404.html
+++ b/404.html
@@ -14,5 +14,5 @@
 <body>
   <app-root></app-root>
 <script src="runtime.c1a901e87f8b8ac8.js" type="module"></script><script src="polyfills.0b96175ab525596c.js" type="module"></script><script src="main.574954de7c8fd53b.js" type="module"></script>
-
+  <p>not found</p>
 </body></html>
