--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script async src="https://www.youtube.com/iframe_api"></script>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
+  <script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 <body>
   <app-root></app-root>
